# vicky_GPT

./: Dockerfile  README.md  main.py  pyproject.toml
